--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -39,8 +39,8 @@
  sticky-top -->
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-  <a class="navbar-brand text-primary" href="#" >Just wish</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary fixed-top pl-4">
+  <a class="navbar-brand text-success" href="#" ><h3>Just wish</h3></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -48,18 +48,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link text-warning" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link navbar-brand text-primary" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-warning" data-toggle="modal" data-target="#exampleModal" href="#">search</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" routerLink = "/contact us">contact us</a>
+        <a class="nav-link navbar-brand text-primary" data-toggle="modal" data-target="#exampleModal" href="#">Search</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link " routerLink = "/about us">about us</a>
+        <a class="nav-link navbar-brand text-primary" routerLink = "/contact us">Contact us</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link navbar-brand text-primary" routerLink = "/about us">About us</a>
       </li>
 
       <!-- <li class="nav-item dropdown">
@@ -106,8 +106,8 @@
       <div class="modal fade bd-example-modal-lg" id="exampleModal"tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">search title</h5>
+            <div class="modal-header bg-secondary">
+              <h5 class="modal-title text-white" id="exampleModalLabel">Search Item</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -148,7 +148,7 @@
                   </div>
                 </div>
                 <div class="col-4 bg-light text-center">
-                  <input type="number" #inputprice min="300">
+                  <input class="form-control" type="number" #inputprice min="300">
                 </div>
             </div>
 
