--- a/src/app/Components/userprofile/userprofile.component.html
+++ b/src/app/Components/userprofile/userprofile.component.html
@@ -1,126 +1,3 @@
-<!--our content goes here--><!--
-<div class="container content">
-  <div class="row profile">
-    <div class="col-md-3">
-      <div class="profile-sidebar position-fixed">-->
-        <!-- SIDEBAR USERPIC --><!--
-        <div class="profile-userpic">
-          <img
-            src="https://media.rockstargames.com/chinatownwars/global/downloads/avatars/zhou_256x256.jpg"
-            class="img-responsive"
-            alt=""
-          />
-        </div>-->
-        <!-- END SIDEBAR USERPIC -->
-        <!-- SIDEBAR USER TITLE --><!--
-        <div class="profile-usertitle">
-          <div class="profile-usertitle-name">Jason Davis</div>
-          <div class="profile-usertitle-job">Developer</div>
-        </div>-->
-        <!-- END SIDEBAR USER TITLE -->
-        <!-- SIDEBAR BUTTONS --><!--
-        <div class="profile-userbuttons">
-          <button type="button" class="btn btn-success btn-sm">Follow</button>
-          <button type="button" class="btn btn-danger btn-sm">Message</button>
-        </div>-->
-        <!-- END SIDEBAR BUTTONS -->
-        <!-- SIDEBAR MENU --><!--
-        <div class="profile-usermenu sidebar-sticky">
-          <ul class="nav flex-column">
-            <li class="active nav-item">
-              <a href="#" class="nav-link active">
-                <i class="fa fa-home"></i>
-                Overview
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://codepen.io/jasondavis/pen/jVRwaG?editors=1000"
-              >
-                <i class="fa fa-user"></i>
-                Account Settings
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" target="_blank">
-                <i class="fa fa-check"></i>
-                Tasks
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa fa-flag"></i>
-                Help
-              </a>
-            </li>
-          </ul>
-        </div>-->
-        <!-- END MENU --><!--
-      </div>
-    </div>
-    <div class="col-md-9">
-      <div class="profile-content">
-        Some user related content goes here...
-        <h1>test</h1>
-        <h1>test</h1>
-        <h1>test</h1>
-      </div>
-    </div>
-  </div>
-</div>-->
-<!--
-<div class="container">
-  <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-9 ft">
-      <footer class="footer">
-        <div class="row">
-          <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
-          </div>
-          <div class="col-md-4">
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/ELMORABITYounes">
-                  <i class="fa fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.facebook.com/younes.elmorabit.92">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a
-                  href="https://www.linkedin.com/in/younes-elmorabit-2a162310b/"
-                >
-                  <i class="fa fa-linkedin"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <ul class="list-inline quicklinks">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </footer>
-    </div>
-  </div>
-</div>-->
-
-
-
-
-
-<!-------------------------------------------------------------------------------------------------------------------------->
 
   <div class="head container-fluid">
       <div class="mt-2 mb-4 pt-2 pl-2">
@@ -262,7 +139,45 @@
                                         </div>
                             </div>
                             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                                        <div class="row">
+                              <div class="row mt-3">
+                                <div class="col-lg-6 col-md-4 col-xl-3 " *ngFor="let item of data">
+                                  <div class="card mt-2 mb-2 first">
+                                    <div  class="product-item  p-0"  >
+                                      <div class="product-image">
+                                         <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}"
+                                        alt="Card image cap" height="220" />
+                                      <div class="product-action">
+
+
+                                        <a [routerLink]="['/product' ,item.id]"><i class="fa fa-search" ></i></a>
+
+                                        <!-- <a href="#"><i class="fa fa-heart"></i></a> -->
+
+                                      </div>
+                                      </div>
+                                    </div>
+                                    <!-- <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}" alt="Card image cap" /> -->
+                                    <div class="card-body">
+                                      <div class="caption">
+                                        <div class="caption-top">
+                                          <h5 class="float-right badge-warning ">
+                                             {{ item.PRDPrice| currency }}
+                                          </h5>
+                                          <h5>
+                                            <a [routerLink]="['/product', item.id]">{{ item.PRDName }}</a>
+                                          </h5>
+                                        </div>
+                                      </div>
+                                      <p>{{ item.PRDDesc }}</p>
+                                      <a class="btn info m-1" [routerLink]="['/product' ,item.id]">details</a>
+                                      <a class="btn info m-1" [routerLink]="['/edit' ,item.id]">Edit</a>
+
+                                    </div>
+                                  </div>
+                                </div>
+
+                            </div>
+                                          <!-- <div class="row">
                                             <div class="col-md-6">
                                                 <label>Experience</label>
                                             </div>
@@ -307,7 +222,7 @@
                                         <label>Your Bio</label><br/>
                                         <p>Your detail description</p>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
