--- a/src/app/Components/order/order.component.html
+++ b/src/app/Components/order/order.component.html
@@ -7,7 +7,7 @@
 
 
 
-{{qnumber}}
+
 
 
 
@@ -49,9 +49,10 @@
                                     <td id="1">{{ datap[i][v].PRDPrice}}</td>
                                     <td>
                                         <div class="qty">
-                                            <button (click) ="updatequantity(qnumber[i],datap[i][v].id )" (click)="refresh()" class="btn-minus"><i class="fa fa-minus"></i></button>
-                                            <input type="text"  id="1N" disabled [value]="qnumber[i]">
-                                            <button (click)="updatequantityadd(qnumber[i],datap[i][v].id)" class="btn-plus"><i class="fa fa-plus"></i></button>
+                                             
+                                            <button (click) ="updatequantity(qnumber[i],datap[i][v].id )"  class="btn-minus"><i class="fa fa-minus"></i></button>
+                                            <input type="number"  id="1N" disabled [value]="qnumber[i]" [min]=1 [max]="3">
+                                            <button (click)="updatequantityadd(qnumber[i],datap[i][v].id,datap[i][v].PRDQuantity)" class="btn-plus"><i class="fa fa-plus"></i></button>
                                         </div>
                                     </td>
                                     <td id="1res">{{qnumber[i]}}</td>
@@ -87,9 +88,12 @@
                                     <h2>Grand Total<span id="grandTotal">${{shippingcost}}</span></h2>
                                 </div>
                                 <div class="cart-btn">
-                                    <a [routerLink]="['/Home']"><button>Update Cart</button></a>
-                                    <a href="checkout.html"><button>Checkout</button></a>
+                                    <a ><button >Update Cart</button></a>
+                                    <!-- <a href="checkout.html"><button>Checkout</button></a> -->
+                                    <div id="myPaypalButtons">
 
+                                    </div>
+                                  
                                 </div>
                             </div>
                         </div>
