--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -51,7 +51,7 @@
       <h2> Product Name :{{ item.PRDName }}</h2>
       <p class="text-success">Description: {{item.PRDDesc}}</p>
       <h3 class="text-danger">Price:{{item.PRDCost | currency}}</h3>
-      <a class="text-muted">Quantity: {{item.PRDCategory}}</a>
+      <a class="text-muted">Quantity: {{item.PRDQuantity}}</a>
       <p class="text-info">number of rating: {{item['no_of_rating']}}</p>
       <p class="text-success">number of rating: {{item['avg_of_rating']}}</p>
       <!-- <ul>
@@ -64,7 +64,7 @@
       <div class="form-group d-inline-flex mr-4 border-muted">
           <button class="form-control border-light btn" (click)="subproduct()"><i class="fa fa-minus text-muted" style=" font-size:12px"></i></button>
           <input  type="text" [(ngModel)]="add" class="form-control border-light text-center input-btn">
-          <button class="form-control border-light btn" (click)="addincrement()"><i class="fa fa-plus text-muted" style="font-size:12px"></i></button>
+          <button class="form-control border-light btn" (click)="addincrement(item.PRDQuantity)"><i class="fa fa-plus text-muted" style="font-size:12px"></i></button>
       </div>
       <button class="btn-danger btn-card" (click)="addtocard(item.id)">
         Add to Cart
